--- a/app/views/dogs/_thumbnail.html.erb
+++ b/app/views/dogs/_thumbnail.html.erb
@@ -4,3 +4,8 @@
     <%= image_tag url_for(dog.images.first), class: "dog-photo", alt: "Photo of #{dog.name}" %>
   </article>
 </a>
+
+<!-- ad -->
+<% if dog_counter.odd? %>
+  <%= image_tag("ad.jpg") %>
+<% end %>
